--- a/src/pages/care-plan/su-monthly-reports.html
+++ b/src/pages/care-plan/su-monthly-reports.html
@@ -105,7 +105,7 @@
       <div class="pageInnerCont padded">
         <paper-dropdown-menu
           id="chunkSelector"
-          label="Reports for different times of day">
+          label="Reports for Months">
           <paper-listbox class="dropdown-content" attr-for-selected="date-string" selected="{{selectedMonth}}">
             <template is="dom-repeat" items="[[altMonths]]" as="month">
 
