minor content changes

--- a/src/pages/care-plan/su-risk.html
+++ b/src/pages/care-plan/su-risk.html
@@ -73,7 +73,7 @@
 
     <paper-dialog id="addRiskDialog" class="guuey-modal guuey-add-modal">
 
-      <h2>Add New Goal</h2>
+      <h2>Add New Risk Assessment</h2>
 
       <vaadin-combo-box
         class="dialogHalf"
