add pageLoaded event emitter on ready

--- a/src/pages/default/def-home.html
+++ b/src/pages/default/def-home.html
@@ -317,6 +317,7 @@
 
       ready: function() {
         this.fire("dbLoaded", {page: "def-home"});
+        this.fire("pageLoaded",{page:this.page});
       },
 
       attached: function() {
